# trajectory_track

./: .gitignore  CMakeLists.txt  README.md
src/: .sharpen.cpp.swp  DisplayImage.cpp.old  derivepos.cpp  derivepos.hpp  imagereduce.cpp  imagereduce.hpp  imgdiff.cpp  imgdiff.hpp  inputhandler.cpp  inputhandler.hpp  main.cpp  recorder.cpp  recorder.h  recorder.hpp  sharpen.cpp  sharpen.hpp  tracker.cpp  tracker.cpp.old  tracker.hpp  tracker.hpp.old  util.cpp  util.h
src/physics/: rigidbody.cpp  rigidbody.hpp  simobj.hpp  simobject.cpp  simobject.hpp  transform.hpp.bak  v3.cpp  v3.hpp
src/test/: rigidbodytest.hpp
